# enterprise-ai-platform

./: AGENTS.md  CONTRIBUTING.md  README.md  greptile.json  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: deployment.yml  docker-tag-beta.yml  docker-tag-latest.yml  pr-desktop-build.yml  pr-integration-tests.yml  pr-jest-tests.yml  pr-playwright-tests.yml  pr-python-model-tests.yml  sandbox-deployment.yml
backend/: Dockerfile  Dockerfile.model_server  pyproject.toml
backend/requirements/: default.txt  dev.txt  ee.txt  model_server.txt
backend/scripts/: api_inference_sample.py  make_foss_repo.sh
cli/: .gitignore  README.md  pyproject.toml
cli/internal/config/: config.go  config_test.go
contributing_guides/: EE_Contributor_IP_Assignment_Agreement.md  contribution_process.md
deployment/: README.md
deployment/aws_ecs_fargate/cloudformation/: README.md  onyx_config.jsonl
deployment/docker_compose/: README.md  env.prod.template  env.template  install.sh
deployment/helm/charts/onyx/: values.yaml
desktop/: README.md
desktop/src/: index.html
desktop/src-tauri/: tauri.conf.json
desktop/src-tauri/src/: main.rs
examples/assistants-api/: topics_analyzer.py
examples/widget/: .env.example
extensions/chrome/src/pages/: options.html  welcome.html
tools/ods/: README.md  pyproject.toml
tools/ods/cmd/: root.go
web/: Dockerfile  README.md  STANDARDS.md  package.json
web/src/sections/sidebar/: UserAvatarPopover.tsx
widget/: README.md  index.html
widget/src/: widget.ts
