[build-system]
requires = ["hatchling", "go-bin~=1.24.11", "manygo"]
build-backend = "hatchling.build"

[project]
name = "enterprise-ai-platform-cli"
readme = "README.md"
description = "Terminal interface for chatting with your Enterprise AI Platform agent"

requires-python = ">=3.9"
keywords = [
  "enterprise-ai-platform", "cli", "chat", "ai", "enterprise-search",
]
classifiers = [
    "Programming Language :: Go",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
]
dynamic = ["version"]

[project.urls]
Repository = "https://github.com/onyx-dot-app/onyx"

[tool.hatch.build]
include = ["go.mod", "go.sum", "main.go", "**/*.go", "**/*.py", "README.md"]

[tool.hatch.version]
source = "code"
path = "internal/_version.py"

[tool.hatch.build.targets.wheel.hooks.custom]
path = "hatch_build.py"
binary_name = "onyx-cli"
tag_prefix = "cli"

[tool.uv]
managed = false
