[build-system]
requires = ["hatchling", "go-bin~=1.26.0", "manygo"]
build-backend = "hatchling.build"

[project]
name = "enterprise-ai-platform-devtools"
description = "Developer utilities for working on AI-platform.com"

readme = "README.md"
requires-python = ">=3.9"
keywords = [
  "enterprise-ai-platform", "cli", "devtools", "tools", "tooling",
]
classifiers = [
    "Programming Language :: Go",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
]
dynamic = ["version"]
dependencies = [
    "fastapi>=0.116.1",
    "openapi-generator-cli>=7.17.0",
]


[project.urls]
Repository = "https://github.com/onyx-dot-app/onyx"

[tool.hatch.build]
include = ["go.mod", "go.sum", "main.go", "**/*.go", "**/*.py", "README.md"]

[tool.hatch.version]
source = "code"
path = "internal/_version.py"

[tool.hatch.build.targets.wheel.hooks.custom]
path = "hatch_build.py"
binary_name = "ods"
tag_prefix = "ods"

[tool.uv]
managed = false
